MacViews: fix bubble direction in RTL.

The Cocoa browser doesn't have good RTL support, and doesn't flip its UI
in RTL. Bubble direction should not flip by default.

Add BUILDFLAG(MAC_VIEWS_BROWSER) to accomplish this.

BUG=657244

Review-Url: https://codereview.chromium.org/2532613002
Cr-Commit-Position: refs/heads/master@{#435207}

Former-commit-id: c60452305f151964dee9b5eaff7c9b0356c41c16